# libdecor-rs

./: Cargo.toml  LICENSE.txt  README.md  crates.js  index.html  search-index.js  settings.html  source-files.js
libdecor/: Cargo.toml  all.html  enum.ErrorKind.html  enum.FrameRequest.html  enum.Request.html  enum.ResizeEdge.html  fn.is_lib_available.html  index.html  sidebar-items.js  struct.Capabilities.html  struct.Configuration.html  struct.Context.html  struct.Error.html  struct.Frame.html  struct.FrameRef.html  struct.State.html  struct.WindowState.html
libdecor-sys/: Cargo.toml  build.rs
libdecor-sys/src/: lib.rs
libdecor/context/: enum.ErrorKind.html  enum.Request.html  struct.Context.html  struct.Error.html
libdecor/examples/: demo.rs
libdecor/frame/: enum.FrameRequest.html  enum.ResizeEdge.html  struct.Capabilities.html  struct.Configuration.html  struct.Frame.html  struct.FrameRef.html  struct.State.html  struct.WindowState.html
libdecor/src/: context.rs  frame.rs  lib.rs
libdecor_sys/: all.html  constant.LIBDECOR_ACTION_CLOSE.html  constant.LIBDECOR_ACTION_FULLSCREEN.html  constant.LIBDECOR_ACTION_MINIMIZE.html  constant.LIBDECOR_ACTION_MOVE.html  constant.LIBDECOR_ACTION_RESIZE.html  constant.LIBDECOR_ERROR_COMPOSITOR_INCOMPATIBLE.html  constant.LIBDECOR_ERROR_INVALID_FRAME_CONFIGURATION.html  constant.LIBDECOR_RESIZE_EDGE_BOTTOM.html  constant.LIBDECOR_RESIZE_EDGE_BOTTOM_LEFT.html  constant.LIBDECOR_RESIZE_EDGE_BOTTOM_RIGHT.html  constant.LIBDECOR_RESIZE_EDGE_LEFT.html  constant.LIBDECOR_RESIZE_EDGE_NONE.html  enum.libdecor.html  index.html  (+38 more)
(+43 files in other folders)
