[package]
authors = ["Christian Meissl <meissl.christian@gmail.com>"]
description = "FFi bindings to libdecor"
edition = "2018"
license = "MIT"
name = "libdecor-sys"
repository = "https://github.com/cmeissl/libdecor-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dlib = {version = "0.5"}
lazy_static = {version = "1.4", optional = true}
libloading = {version = "0.7", optional = true}

[build-dependencies]
pkg-config = "0.3"

[features]
default = []
dlopen = ["lazy_static", "libloading"]

[package.metadata.docs.rs]
all-features = true
