[package]
authors = ["Christian Meissl <meissl.christian@gmail.com>"]
description = "Bindings to libdecor"
edition = "2018"
license = "MIT"
name = "libdecor"
repository = "https://github.com/cmeissl/libdecor-rs"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
libdecor-sys = {version = "0.1.0", path = "../libdecor-sys"}
wayland-client = {version = "0.29", features = ["use_system_lib"]}
wayland-protocols = {version = "0.29", features = ["client"]}

[dev-dependencies]
tempfile = ">=2.0, <4.0"
wayland-cursor = "0.29"

[features]
dlopen = ["libdecor-sys/dlopen"]

[package.metadata.docs.rs]
all-features = true
